<resources>
    <string name="app_name">Warrant-E</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_msg">Forgot password ?</string>
    <string name="create_user_msg">New user ? Sign up !</string>
    <string name="connect_user_msg">Already registered ? Sign in !</string>

    <string name="home">Home</string>
    <string name="next_expiration">Next expirations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>