<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="username"
        android:hint="@string/email"
        android:height="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittextborder"
        android:textColor="@color/textColor"
        android:singleLine="true" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:ellipsize="start"
            android:hint="@string/password"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/edittextborder"
            android:textColor="@color/textColor"
            android:singleLine="true"
            android:layout_marginBottom="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#2044d5"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:background="@drawable/buttonborder"/>

</LinearLayout>