<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/background_img_trans">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_background"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.LoginActivity"
        tools:showIn="@layout/activity_login"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="42sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blue_warrante"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/warranteTxt"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/blue_warrante"
            app:endIconTint="@color/blue_warrante"
            app:startIconContentDescription="@string/email"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@+id/warranteTxt">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="10dp"
                android:autofillHints="username"
                android:background="@drawable/edittextborder"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLayout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/blue_warrante"
            app:passwordToggleTint="@color/blue_warrante"
            app:startIconContentDescription="@string/password"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edittextborder"
                android:ellipsize="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_msg"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blue_warrante"
            android:layout_gravity="center_horizontal"
            android:id="@+id/forgotPassword"
            android:layout_below="@id/passwordLayout"
            android:layout_alignEnd="@id/passwordLayout"
            android:onClick="forgotPassword"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassword"
            android:layout_alignEnd="@+id/passwordLayout"
            android:layout_margin="15dp"
            android:background="@drawable/buttonborder"
            android:backgroundTint="#2044d5"
            android:gravity="center"
            android:text="@string/login_button"
            android:textColor="#ffffff" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_user_msg"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blue_warrante"
            android:layout_gravity="center_horizontal"
            android:id="@+id/registerSentence"
            android:layout_below="@id/loginButton"
            android:onClick="forgotPassword"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"/>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_bar"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>